--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lotech markdown parser",
   "main": "dist/index.js",
   "starter-kit":"https://github.com/vinniegarcia/es6-module-starter",
-  "scripts": {
+  "noscripts": {
     "dev": "babel-node src/index.js",
     "lint": "eslint src/**/*.js",
     "compile": "babel --stage 0 -d dist/ src/",
@@ -15,6 +15,10 @@
     "coveralls": "cat ./coverage/istanbul/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "plato": "plato -d coverage/plato dist/index.js",
     "test": "npm run istanbul && npm run coveralls"
+  },
+  "scripts": {
+    "cover" : "istanbul cover --dir coverage/istanbul dist/test/*.js --report lcovonly",
+    "coveralls": "cat ./coverage/istanbul/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -27,7 +31,8 @@
     "markdown",
     "robusta",
     "robusta code",
-    "typescript"
+    "typescript",
+    "zozol"
   ],
   "author": "Nicolas Zozol <nz@robusta.io>",
   "license": "MIT",
@@ -39,7 +44,8 @@
     "eslint": "^1.2.1",
     "istanbul": "^0.3.18",
     "plato": "^1.5.0",
-    "tape": "^4.2.0"
+    "tape": "^4.2.0",
+    "nodeunit": "~0.9.0"
   },
   "dependencies": {}
 }
