--- a/package.json
+++ b/package.json
@@ -1,59 +1,28 @@
 {
   "name": "lotech",
-  "version": "0.0.1",
-  "description": "Lotech markdown parser",
-  "main": "dist/index.js",
-  "starter-kit": "https://github.com/vinniegarcia/es6-module-starter",
-  "noscripts": {
-    "dev": "babel-node src/index.js",
-    "lint": "eslint src/**/*.js",
-    "compile": "babel --stage 0 -d dist/ src/",
-    "prepublish": "npm run compile",
-    "tape": "tape dist/test/*.js",
-    "istanbul": "npm run compile && istanbul cover --dir coverage/istanbul node_modules/argg dist/test/*.js --report lcovonly",
-    "coverage": "npm run compile && istanbul cover --dir coverage/istanbul node_modules/argg dist/test/*.js --report html",
-    "coveralls": "cat ./coverage/istanbul/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "plato": "plato -d coverage/plato dist/index.js",
-    "test": "npm run istanbul && npm run coveralls"
-  },
+  "version": "0.1.0",
+  "description": "Boundaries system for clean-code training",
+  "main": "src/main/index.js",
   "scripts": {
-    "test": "babel src --out-dir dist && nodeunit dist/test",
-    "cover": "istanbul cover --dir coverage/istanbul dist/test/*.js --report lcovonly",
-    "coveralls": "cat ./coverage/istanbul/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "dev": "babel --watch src --out-dir dist",
-    "compile": "babel src --out-dir dist --sourceMaps true --sourceMapTarget jo.map",
-    "lint": "eslint src/**/*.js",
-    "concat": "browserify dist/index.js -o dist/lotech.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/robusta-hk/lotech.git"
+    "test": "nodeunit src/test/compile-test.js",
+    "rm": "rimraf dist/",
+    "build": "rimraf dist/ && mkdirp dist && browserify src/main/index.js --standalone lotech -o dist/lotech.js",
+    "dev": "rimraf dist/ && mkdirp dist && watchify src/main/index.js --standalone lotech -o dist/lotech.js -v"
   },
   "keywords": [
-    "lotech",
-    "parsec",
-    "parser",
-    "markdown",
-    "robusta",
-    "robusta code",
-    "typescript",
-    "zozol"
+    "clean-code"
   ],
-  "author": "Nicolas Zozol <nz@robusta.io>",
+  "author": "Nicolas Zozol",
   "license": "MIT",
-  "devDependencies": {
-    "argg": "0.0.2",
-    "babel-cli": "^6.10.1",
-    "babel-eslint": "^4.1.0",
-    "babel-preset-es2015": "^6.9.0",
-    "browserify": "^13.0.1",
-    "coveralls": "^2.11.4",
-    "eslint": "^1.2.1",
-    "istanbul": "^0.3.18",
-    "minify": "^2.0.9",
-    "nodeunit": "~0.9.0",
-    "plato": "^1.5.0",
-    "tape": "^4.2.0"
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "mkdirp": "^0.5.1",
+    "parser-combinator": "^0.4.1"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "browserify": "^14.3.0",
+    "nodeunit": "^0.11.0",
+    "rimraf": "^2.6.1",
+    "watchify": "^3.9.0"
+  }
 }
